mdapi-source/package/objects/Travel_Expenses__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_Date__c</fullName>
        <label>Reported Date</label>
        <type>Date</type>
    </fields>
    <label>Travel Expenses</label>
    <nameField>
        <label>Travel Expenses Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travel Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>